# ComfyUI-Pixaroma

./: .clauderules  .gitignore  .gitlab-ci.yml  .tracking  CLAUDE.md  LICENSE  README.md  __init__.py  nodes.py  nodes_3d.py  nodes_compare.py  nodes_crop.py  nodes_label.py  nodes_utils.py  pyproject.toml  requirements.txt  server_routes.py
.agent/: PRD.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish.yml
.gitlab/issue_templates/: Default.md
assets/: note-pixaroma-llm-prompt.txt
assets/audio_studio_parity/: index.html
assets/fonts/: NOTICE.md
assets/models/: bunny.glb
docs/: audio-react-math.md  composer-fx-math.md  inpaint-crop-math.md  nodes2_migration_guide.md  text-overlay-render.md
js/3d/: api.mjs  composites.mjs  core.mjs  engine.mjs  importer.mjs  index.js  interaction.mjs  objects.mjs  persistence.mjs  picker.mjs  shape_params.mjs  shapes.mjs
js/align/: index.js
js/audio_studio/: api.mjs  audio_analysis.mjs  core.mjs  index.js  render.mjs  shaders.mjs  transport.mjs  ui.mjs
js/compare/: index.js
js/composer/: api.mjs  core.mjs  crop.mjs  eraser.mjs  fx_engine.mjs  index.js  interaction.mjs  layers.mjs  placeholder.mjs  render.mjs  ui.mjs
js/connection_fx/: index.js
js/crop/: alignments.mjs  core.mjs  index.js  interaction.mjs  panel.mjs  render.mjs
js/find_replace/: core.mjs  index.js  interaction.mjs  render.mjs
js/framework/: bg_removal_dropdown.mjs  canvas.mjs  components.mjs  fonts.mjs  index.mjs  layers.mjs  layout.mjs  text_editor.mjs  text_render.mjs  theme.mjs
js/group_pixaroma/: index.js
js/group_switch/: index.js
js/help_toolbar/: help_defs.mjs  index.js
js/image_info/: index.js
js/image_resize/: index.js  ui.mjs
js/inpaint_crop/: core.mjs  geometry.mjs  index.js  paint.mjs  render.mjs
js/krea_lora_convert/: index.js
js/label/: core.mjs  index.js  render.mjs
js/load_image/: api.mjs  index.js  resize_modes.mjs  ui.mjs
js/load_image_mini/: core.mjs  index.js  settings.mjs
js/load_images_folder/: api.mjs  index.js  state.mjs  ui.mjs
js/load_video/: index.js
js/load_video_frame/: index.js
js/lora_loader/: api.mjs  core.mjs  dropdown.mjs  index.js  info_panel.mjs  interaction.mjs  render.mjs  settings.mjs
js/mute_switch/: core.mjs  editor.mjs  index.js  render.mjs  upstream.mjs  vue_list.mjs
js/node_colors/: index.js
js/node_titles/: index.js
js/note/: blocks.mjs  codeview.mjs  core.mjs  css.mjs  icons.mjs  index.js  render.mjs  sanitize.mjs  toolbar.mjs
js/notify/: index.js
js/number/: index.js
js/outpaint/: core.mjs  index.js  settings.mjs
js/outpaint_stitch/: core.mjs  index.js  settings.mjs  sliders.mjs
js/paint/: api.mjs  canvas.mjs  core.mjs  engine.mjs  events.mjs  history.mjs  index.js  render.mjs  tools.mjs  transform.mjs  ui.mjs
js/pause_image/: index.js  prune.mjs  ui.mjs
js/pause_text/: index.js  prune.mjs  state.mjs  ui.mjs
js/pixgroup/: index.js
js/portrait_landscape/: index.js
js/preview/: index.js
js/prompt/: expand.mjs  index.js  library.mjs  library_editor.mjs  settings.mjs
js/prompt_multi/: core.mjs  index.js  interaction.mjs  (+1 more)
nodes/: _audio_react_engine.py  _bg_removal_helpers.py  _cache_bust_helpers.py  _font_catalog.py  _fx_adjust_engine.py  _inpaint_helpers.py  _krea_lora_convert_helpers.py  _lora_helpers.py  _prompt_reader_helpers.py  _resize_helpers.py  _save_helpers.py  _text_render_helpers.py  _video_helpers.py  node_3d.py  node_audio_depth.py  node_audio_react.py  node_audio_studio.py  node_combine.py  node_compare.py  node_composition.py  node_crop.py  node_depth_map.py  node_find_replace.py  node_group_switch.py  node_image_info.py  node_image_resize.py  node_inpaint_crop.py  node_inpaint_stitch.py  node_label.py  node_load_image.py  node_load_image_mini.py  node_load_images_folder.py  node_load_video.py  node_loop.py  node_lora_loader.py  node_mute_switch.py  node_note.py  node_number.py  node_outpaint.py  node_outpaint_stitch.py  (+34 more)
scripts/: audio_parity_check.py  build_mute_switch_workflows.py  download_fonts.py  font_catalog_check.py  fx_js_runner.mjs  fx_parity_check.py  mute_switch_test.mjs  save_prefix_check.py  text_overlay_parity_check.py
workflows/: 3D Builder Pixaroma Workflow.json  Audio Depth Pixaroma Workflow.json  AudioReact Workflow.json  Crop Pixaroma Workflow.json  Image Compare Pixaroma Workflow.json  Image Composer Pixaroma Workflow.json  Labels Pixaroma Workflow.json  Note Pixaroma Workflow.json  Paint Pixaroma Workflow.json
(+175 files in other folders)
