[project]
name = "ComfyUI-Pixaroma"
description = "Creative suite for ComfyUI: Image Composer, Paint Pixaroma, 3D Builder, AudioReact, Save Mp4, Image Crop, Image Compare, Note, Label, Resolution, Preview Image, Show Text, Prompt Reader (read prompts from PNG metadata), Load Image (with inline resize), Notify (sound-on-execute), Align (canvas snap & alignment guides), WH (manual width+height), Switch (multi-input router for any data type), Switch WH (A/B picker), Number (int+float outputs), Text (multi-line prompts), Prompt Stack (toggleable prompt chunks joined into one output), Remove Background (one-node cutout + mask + inverted mask), with layers, transforms, AI background removal, audio-reactive video, and more."
version = "1.3.60"
license = { file = "LICENSE.txt" }

keywords = ["comfyui", "image-editor", "3d", "paint", "layers", "compositor", "compare", "crop", "label", "audio-reactive", "video", "mp4", "pixaroma"]

# Core dependencies are none (PIL/torch come from ComfyUI).
# rembg is optional; the Remove BG button will show an error if missing.
dependencies = []

[project.optional-dependencies]
rembg = ["rembg>=2.0.50", "onnxruntime>=1.14.0"]

[project.urls]
Repository = "https://github.com/pixaroma/ComfyUI-Pixaroma"
Issues     = "https://github.com/pixaroma/ComfyUI-Pixaroma/issues"
YouTube    = "https://www.youtube.com/@pixaroma"

[tool.comfy]
PublisherId = "pixaroma"
DisplayName = "Pixaroma"
Icon = "https://raw.githubusercontent.com/pixaroma/ComfyUI-Pixaroma/main/assets/pixaroma_logo.png"
