[project]
name = "ComfyUI-Pixaroma"
description = "Creative suite for ComfyUI: Image Composer, Paint Pixaroma, 3D Builder, AudioReact, Save Mp4, Load Video, Image Crop, Inpaint Crop + Inpaint Stitch, Image Compare, Pause Image, XY Plot, Note, Label, Resolution, Preview Image, Show Text, Prompt Reader, Load Image, Load Images from Folder, Notify, Align, WH, Switch, Switch Source, Switch WH, Set/Get, Number, Seed, Text, Prompt Stack, Remove Background, with layers, transforms, AI background removal, audio-reactive video, and more."
version = "1.4.1"
license = { file = "LICENSE.txt" }

keywords = ["comfyui", "image-editor", "3d", "paint", "layers", "compositor", "compare", "crop", "label", "audio-reactive", "video", "mp4", "pixaroma"]

# Core dependencies are none (PIL/torch come from ComfyUI).
# rembg is optional; the Remove BG button will show an error if missing.
dependencies = []

[project.optional-dependencies]
rembg = ["rembg>=2.0.50", "onnxruntime>=1.14.0"]

[project.urls]
Repository = "https://github.com/pixaroma/ComfyUI-Pixaroma"
Issues     = "https://gitlab.com/pixaroma/comfyui-pixaroma/-/issues"
YouTube    = "https://www.youtube.com/@pixaroma"

[tool.comfy]
PublisherId = "pixaroma"
DisplayName = "Pixaroma"
Icon = "https://gitlab.com/pixaroma/comfyui-pixaroma/-/raw/main/assets/pixaroma_logo.png"
